fix(desktop): lessen jank on multi-out amount field

--- a/web/angular-wallet/src/app/main/send-burst/send-multi-out-form/send-multi-out-form.component.scss
+++ b/web/angular-wallet/src/app/main/send-burst/send-multi-out-form/send-multi-out-form.component.scss
@@ -36,6 +36,10 @@ form {
         width: 30%
       }
 
+      mat-form-field.last {
+        width: 20%;
+      }
+
       mat-icon {
         cursor: pointer;
       }
