--- a/web/angular-wallet/src/app/main/dashboard/dashboard.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/dashboard.component.html
@@ -54,13 +54,10 @@
                                      [account]="account"
                                      [paginationEnabled]="false"
               ></app-transaction-table>
-              <div *ngIf="!dataSource" class="text-center">
+              <div *ngIf="!dataSource || !account.transactions.length">
                 <div>
                   {{ 'no_transactions_yet' | i18n }}
                 </div>
-                <a href="http://faucet.burst-alliance.org:8080" target="_blank">
-                  {{ 'click_to_claim' | i18n }}
-                </a>
               </div>
             </div>
             <a *ngIf="dataSource && dataSource.data.length"
