Fix multi-out jank and add No Transactions Msg to dashboard (#1043)
* fix(desktop): lessen jank on multi-out amount field

* fix(dashboard): add no transactions msg

* fix(desktop): one last fix

--- a/web/angular-wallet/src/app/main/send-burst/send-multi-out-form/send-multi-out-form.component.html
+++ b/web/angular-wallet/src/app/main/send-burst/send-multi-out-form/send-multi-out-form.component.html
@@ -30,7 +30,7 @@
           <burst-recipient-input [recipientValue]="recipient.addressRaw"
                                  (recipientChange)="onRecipientChange($event, i)"
                                  [withQrCode]="false"></burst-recipient-input>
-          <mat-form-field *ngIf="!sameAmount">
+          <mat-form-field [class.last]="isLastRecipientItem(i) && i !== 0" *ngIf="!sameAmount">
             <input matInput [(ngModel)]="recipient.amount"
                    name="amount{{i}}"
                    placeholder="{{ 'amount' | i18n }}"
