--- a/web/angular-wallet/src/app/login/login-active/login-active.component.scss
+++ b/web/angular-wallet/src/app/login/login-active/login-active.component.scss
@@ -1,35 +1,48 @@
-$media-querie-mobile: 0;
-$media-querie-tablet: 768px;
-$media-querie-desktop: 992px;
-$media-querie-screen:  1200px;
+@import "src/@fuse/scss/fuse";
+
+$media-query-mobile: 0;
+$media-query-tablet: 768px;
+$media-query-desktop: 992px;
+$media-query-screen: 1200px;
+
+.login-active__container{
+  background: linear-gradient(60deg, #003D6E, #00579D);
+  width: 100%;
+  height: 100%;
+}
 
 .signup {
   margin: 40px auto;
+
   &__header {
     padding: 1rem;
     text-align: center;
   }
+
   &__logo {
     height: 30px;
   }
+
   &__container {
-      height: calc(100vh - 50px);
-      margin: 0 auto;
-      max-width: 720px;
+    height: calc(100vh - 50px);
+    margin: 0 auto;
+    max-width: 720px;
   }
+
   &__title {
-    color: #333333;
+    color: #F5F5F5;
     font-weight: bold;
     margin: 3rem 0;
     position: relative;
-    @media screen and (min-width: $media-querie-mobile) {
+    @media screen and (min-width: $media-query-mobile) {
       font-size: 2rem;
       margin-left: 3rem;
     }
-    @media screen and (min-width: $media-querie-tablet) {
+    @media screen and (min-width: $media-query-tablet) {
       font-size: 3.5rem;
       margin-left: 0;
     }
+
     &::after {
       background: #00579d;
       bottom: -5px;
