--- a/web/angular-wallet/src/app/login/login-passive/login-passive.component.html
+++ b/web/angular-wallet/src/app/login/login-passive/login-passive.component.html
@@ -1,11 +1,8 @@
-<div class="signup">
-  <header class="signup__header">
-      <a [routerLink]="[ '' ]">
-        <img alt="Burst logo" class="signup__logo" src="assets/images/logos/logo_blue.png"/>
-      </a>
-  </header>
-  <div class="signup__container">
+<div class="login-passive__container">
+  <div class="signup">
+    <div class="signup__container">
       <h1 class="signup__title">Enter a Burst address to watch</h1>
       <app-create-passive></app-create-passive>
+    </div>
   </div>
 </div>
