--- a/web/angular-wallet/src/app/setup/account/create-active/pin/pin.component.html
+++ b/web/angular-wallet/src/app/setup/account/create-active/pin/pin.component.html
@@ -11,5 +11,5 @@
 </small>
 <div class="text-center navigation">
     <button class="btn-danger" mat-raised-button (click)="back()">{{"back" | i18n }}</button>
-    <button class="btn-success" mat-raised-button (click)="finish()" disabled="{{!isValid}}">{{"finish" | i18n }}</button>
+    <button class="btn-success" mat-raised-button (click)="nextOrFinish()" disabled="{{!isValid}}">{{"finish" | i18n }}</button>
 </div>
