--- a/web/angular-wallet/src/app/setup/account/create-active/create.component.html
+++ b/web/angular-wallet/src/app/setup/account/create-active/create.component.html
@@ -31,7 +31,7 @@
       </div>
     </mat-step>
     <mat-step *ngIf="newUser">
-      <ng-template matStepLabel>{{ 'secure' | i18n }}</ng-template>
+      <ng-template matStepLabel>{{ 'activate' | i18n }}</ng-template>
       <div class="step-container">
         <app-account-activate></app-account-activate>
       </div>
