--- a/web/angular-wallet/src/app/setup/account/create-active/create.component.html
+++ b/web/angular-wallet/src/app/setup/account/create-active/create.component.html
@@ -18,13 +18,14 @@
         </ng-container>
       </div>
     </mat-step>
-    <mat-step [completed]="this.createService.getAddress() != undefined && this.createService.getId() != undefined">
+    <mat-step
+      [completed]="this.createService.getAddress() !== undefined && this.createService.getId() !== undefined">
       <ng-template matStepLabel>{{ 'record' | i18n }}</ng-template>
       <div class="step-container">
         <app-account-create-record></app-account-create-record>
       </div>
     </mat-step>
-    <mat-step>
+    <mat-step [completed]="this.createService.getPin() !== undefined">
       <ng-template matStepLabel>{{ 'secure' | i18n }}</ng-template>
       <div class="step-container">
         <app-account-create-pin [lastStep]="!newUser"></app-account-create-pin>
