fix: Layout for passive account

--- a/web/angular-wallet/src/app/login/login-passive/login-passive.component.scss
+++ b/web/angular-wallet/src/app/login/login-passive/login-passive.component.scss
@@ -3,7 +3,7 @@ $media-querie-tablet: 768px;
 $media-querie-desktop: 992px;
 $media-querie-screen: 1200px;
 
-.login-active__container {
+.login-passive__container {
   background: linear-gradient(60deg, #003D6E, #00579D);
   width: 100%;
   height: 100%;
