--- a/web/angular-wallet/src/app/setup/account/create-passive/create-passive.component.scss
+++ b/web/angular-wallet/src/app/setup/account/create-passive/create-passive.component.scss
@@ -1,27 +1,32 @@
-$media-querie-mobile: 0;
-$media-querie-tablet: 768px;
+@import "src/@fuse/scss/fuse";
+
+$media-query-mobile: 0;
+$media-query-tablet: 768px;
 
 .accountRS-container mat-form-field {
-  @media screen and (min-width: $media-querie-mobile) {
+  @media screen and (min-width: $media-query-mobile) {
     margin-left: 3rem;
     width: 80%;
   }
-  @media screen and (min-width: $media-querie-tablet) {
+  @media screen and (min-width: $media-query-tablet) {
     margin-left: 0;
     width: 100%;
   }
 }
 
 .fa-arrow-right {
-    color: #fff;
-    top: -4px;
-    left: 10px;
-    position: relative;
-    cursor: pointer;
+  color: #fff;
+  top: -4px;
+  left: 10px;
+  position: relative;
+  cursor: pointer;
 }
 
 .address-container {
-  text-align:center;
+  @include mat-elevation(16);
+  text-align: center;
+  background: white;
+  padding: 24px;
 }
 
 mat-form-field {
