--- a/web/angular-wallet/src/app/setup/account/account.component.html
+++ b/web/angular-wallet/src/app/setup/account/account.component.html
@@ -1,3 +1,4 @@
+<!-- TODO seems that this component is not being used anymor -->
 <mat-grid-list cols="2" gutterSize="10px">
   <mat-grid-tile>
     <mat-card>
