--- a/web/angular-wallet/src/app/login/login-active/login-active.component.html
+++ b/web/angular-wallet/src/app/login/login-active/login-active.component.html
@@ -1,12 +1,14 @@
+<section class="login" id="login-particles" [fusePerfectScrollbar]="false" [fusePerfectScrollbarOptions]="{suppressScrollY:true}">
 <div class="login-active__container">
-  <div class="signup">
-    <div class="signup__container">
-      <h1 *ngIf="newUser | async; else updateTitle" class="signup__title">{{ 'create_your_account' | i18n }}</h1>
-      <app-account-create [newUser]="newUser | async"></app-account-create>
+    <div class="signup">
+      <div class="signup__container">
+        <h1 *ngIf="newUser | async; else updateTitle" class="signup__title">{{ 'create_your_account' | i18n }}</h1>
+        <app-account-create [newUser]="newUser | async"></app-account-create>
+      </div>
     </div>
-  </div>
 
-  <ng-template #updateTitle>
-    <h1 class="signup__title">{{ 'update_burst_account' | i18n }}</h1>
-  </ng-template>
-</div>
+    <ng-template #updateTitle>
+      <h1 class="signup__title">{{ 'update_burst_account' | i18n }}</h1>
+    </ng-template>
+  </div>
+</section>
