--- a/web/angular-wallet/src/app/login/login-active/login-active.component.scss
+++ b/web/angular-wallet/src/app/login/login-active/login-active.component.scss
@@ -5,10 +5,24 @@ $media-query-tablet: 768px;
 $media-query-desktop: 992px;
 $media-query-screen: 1200px;
 
-.login-active__container{
+
+.login {
+  display: flex;
+  height: calc(100vh - 64px);
+  width: 100vw;
+  align-items: center;
+  overflow: hidden;
+
   background: linear-gradient(60deg, #003D6E, #00579D);
-  width: 100%;
-  height: 100%;
+  -webkit-animation: bg 30s ease infinite;
+  -moz-animation: bg 30s ease infinite;
+  animation: bg 30s ease infinite;
+
+  .login-active__container {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+  }
 }
 
 .signup {
