--- a/web/angular-wallet/src/app/login/login-passive/login-passive.component.html
+++ b/web/angular-wallet/src/app/login/login-passive/login-passive.component.html
@@ -1,8 +1,11 @@
-<div class="login-passive__container">
-  <div class="signup">
-    <div class="signup__container">
-      <h1 class="signup__title">Enter a Burst address to watch</h1>
-      <app-create-passive></app-create-passive>
+<section class="login" id="login-particles" [fusePerfectScrollbar]="false"
+         [fusePerfectScrollbarOptions]="{suppressScrollY:true}">
+  <div class="login-passive__container">
+    <div class="signup">
+      <div class="signup__container">
+        <h1 class="signup__title">{{ 'watch_burst_account' | i18n }}</h1>
+        <app-create-passive></app-create-passive>
+      </div>
     </div>
   </div>
-</div>
+</section>
