--- a/web/angular-wallet/src/app/login/login.component.html
+++ b/web/angular-wallet/src/app/login/login.component.html
@@ -1,5 +1,5 @@
-<section class="login" id="login-particles">
-  <div class="login__panel">
+<section class="login" id="login-particles" [fusePerfectScrollbar]="false" [fusePerfectScrollbarOptions]="{suppressScrollY:true}">
+<div class="login__panel">
     <div class="login__header">
       <a [routerLink]="[ '' ]">
         <img alt="Burst logo" class="login__logo" src="assets/images/logos/logo_blue.png"/>
@@ -10,10 +10,10 @@
       <h1 class="login__title">{{ 'get_burst_account' | i18n }}</h1>
       <p class="login__info">{{ 'new_user_text' | i18n }}</p>
       <div class="login__actions">
-        <a class="login__link--yes" [routerLink]="[ '/login/active' ]" [queryParams]="{ newUser: true }">{{ 'new_user_yes' | i18n }}</a>
-        <a class="login__link--no" [routerLink]="[ '/login/active' ]" >{{ 'new_user_no' | i18n }}</a>
+        <a class="login__link--yes" [routerLink]="[ '/login/active' ]" [queryParams]="{ newUser: true }">{{ 'account_create_new' | i18n }}</a>
+          <a class="login__link--no" [routerLink]="[ '/login/active' ]" >{{ 'account_import' | i18n }}</a>
         <p class="login__divider">{{ 'or' | i18n }}</p>
-        <a class="login__link--default" [routerLink]="[ '/login/passive' ]" >{{ 'create_passive' | i18n }}</a>
+        <a class="login__link--default" [routerLink]="[ '/login/passive' ]" >{{ 'account_watch' | i18n }}</a>
       </div>
     </div>
   </div>
