reverted erronouos class renaming

--- a/web/angular-wallet/src/app/disclaimer/disclaimer.component.html
+++ b/web/angular-wallet/src/app/disclaimer/disclaimer.component.html
@@ -27,7 +27,7 @@
 
           </div>
 
-          <div class="action-row">
+          <div class="button-row">
             <button class="mat-primary" mat-button (click)="agree()">I Understand</button>
           </div>
 
