--- a/web/angular-wallet/src/app/main/set-reward-recipient/set-reward-recipient.component.html
+++ b/web/angular-wallet/src/app/main/set-reward-recipient/set-reward-recipient.component.html
@@ -20,11 +20,11 @@
       <burst-recipient-input appearance="outline" (recipientChange)="onRecipientChange($event)"></burst-recipient-input>
 
       <mat-form-field appearance="outline">
-        <input matInput [(ngModel)]="feeNQT" name="feeNQT" placeholder="{{ 'fee' | i18n }}">
+        <input matInput [(ngModel)]="fee" name="feeNQT" placeholder="{{ 'fee' | i18n }}">
         <label matSuffix>BURST</label>
       </mat-form-field>
 
-      <burst-fee-selector [fees]="fees" [(feeNQT)]="feeNQT"></burst-fee-selector>
+      <burst-fee-selector [fees]="fees" [(feeNQT)]="fee"></burst-fee-selector>
 
       <mat-form-field class="pin" appearance="outline">
         <input type="password" matInput [(ngModel)]="pin" name="pin" placeholder="Your PIN">
