--- a/web/angular-wallet/src/app/main/set-reward-recipient/set-reward-recipient.component.html
+++ b/web/angular-wallet/src/app/main/set-reward-recipient/set-reward-recipient.component.html
@@ -20,7 +20,7 @@
       <burst-recipient-input appearance="outline" (recipientChange)="onRecipientChange($event)"></burst-recipient-input>
 
       <mat-form-field appearance="outline">
-        <input matInput [(ngModel)]="fee" name="feeNQT" placeholder="{{ 'fee' | i18n }}">
+        <input matInput [(ngModel)]="fee" name="fee" placeholder="{{ 'fee' | i18n }}">
         <label matSuffix>BURST</label>
       </mat-form-field>
 
